Working on frontend rendering.

--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -17,7 +17,7 @@
 
         {{ popup(record.image, 1200, 500) }}
 
-        {{ record.body }}
+        {{ record.content }}
 
         {{ include('partials/_recordfooter.twig', { 'record': record }) }}
 
