added cssvar base

--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -1,6 +1,7 @@
 //** Styling
-@import './vendor/vendor';
+@import './vendor/bootstrap/bootstrap';
 @import './init/init';
+@import './vendor/vendor';
 @import './layout/layout';
 @import './modules/modules';
 
