--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -1,4 +1,4 @@
 //** Init | Variables
 
-$card-box-shadow: 0 7.5px 15px -5px  transparentize(theme-color('secondary'), 0.9);
-$letter-spacing: 0.5px;
+$card-box-shadow: 0 7.5px 15px -5px rgba(0,0,0, 0.07);
+$letter-spacing: 1.2px;
