--- a/assets/scss/layout/_admin.scss
+++ b/assets/scss/layout/_admin.scss
@@ -1,18 +1,7 @@
 //** Layout | Admin
 
 $admin-toolbar-height: 28px;
-$admin-header-height: 70px;
-$admin-sidebar-width: 190px;
-
-html, body {
-  margin: 0;
-  height: 100%;
-}
-
-body {
-  background: color('gray');
-  min-height: 100%;
-}
+$admin-sidebar-width: 200px;
 
 // Main Layout Grid
 
@@ -53,9 +42,8 @@ body {
     display: flex;
     flex-basis: 100%;
     grid-area: header;
-    height: $admin-header-height;
     position: relative;
-    padding: 0 $spacer*2;
+    padding: $spacer $spacer 0 $spacer;
   }
 
   &__sidebar {
@@ -66,31 +54,20 @@ body {
   &__body {
     flex: 1;
     grid-area: body;
-    padding: $spacer*2 $spacer*1 $spacer*2 $spacer*2;
+    padding: $spacer * 2 $spacer;
     min-height: 100vh;
-
-    @include media-breakpoint-up(xl) {
-      padding: $spacer*2 $spacer*2 $spacer*2 $spacer*4;
-    }
 
     >.container{
       display: flex;
     }
 
     &--main{
-      padding-right: $spacer*2;
+      padding-right: $spacer * 2;
       flex: 100%;
-      @include media-breakpoint-up(xl) {
-        padding-right: $spacer*4;
-      }
     }
 
     &--aside{
       flex: 0 0 $admin-sidebar-width * 1.25;
-
-      @include media-breakpoint-up(xl) {
-        flex: 0 0 $admin-sidebar-width * 1.5;
-      }
     }
   }
 }
