--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -5,7 +5,7 @@
     font-weight: $font-weight-normal;
     font-size: $h3-font-size;
     i{
-      color: theme-color('primary')
+      color: var(--primary)
     }
   }
   &--topbar{
@@ -13,36 +13,5 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-  }
-  &--toolbar{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    li{
-      display: inline-flex;
-      margin-right: $spacer;
-      &:last-child{
-        margin-right: 0;
-      }
-      .toolbar--link{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: transparent;
-        border: 0;
-        width: 40px;
-        height: 40px;
-        background: $white;
-        box-shadow: $card-box-shadow;
-        border-radius: 100%;
-        &:hover{
-          text-decoration: none;
-          cursor: pointer;
-        }
-        i{
-          color: theme-color('primary')
-        }
-      }
-    }
   }
 }
