added cssvar base

--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ block('title')|striptags }}</title>
     {% block stylesheets %}
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:400,600&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ asset('assets/bolt.css') }}">
     {% endblock %}
@@ -25,7 +25,7 @@
     <!-- Admin Header -->
     <header id="header" class="admin__header">
         <div class="container">
-          <admin-topbar title="{{ block('title') }}"></admin-topbar>
+          <admin-header title="{{ block('title') }}"></admin-header>
         </div>
     </header>
     <!-- End Admin Header -->
@@ -37,7 +37,7 @@
                 :brand="'{{ asset('assets/brand.svg') }}'"
                 :menu="{{ sidebarmenu() }}"
                 :version="'{{ version|default('unknown') }}'"
-            ></admin-sidebar >
+            ></admin-sidebar>
         </div>
     </div>
     <!-- End Admin Sidebar -->
@@ -71,8 +71,6 @@
         }
 
     </script>
-    <script src="{{ asset('assets/manifest.js') }}"></script>
-    <script src="{{ asset('assets/vendor.js') }}"></script>
     <script src="{{ asset('assets/bolt.js') }}"></script>
 {% endblock %}
 
