--- a/assets/scss/init/_mixins.scss
+++ b/assets/scss/init/_mixins.scss
@@ -14,7 +14,85 @@
 }
 
 
-@mixin button-css-variable($background) {
-  background-color: var(--#{$background});
-  border-color: var(--#{$background});
+@mixin button-css-variable($color) {
+  background-color: var(--#{$color});
+  border-color: var(--#{$color});
+  // hover
+  @include hover {
+    background-color: var(--#{$color}-600);
+    border-color: var(--#{$color}-600);
+  }
+  // focus
+  &:focus,
+  &.focus {
+    box-shadow: 0 0 0 $btn-focus-width var(--#{$color}-300);
+  }
+
+  // disabled
+  &.disabled,
+  &:disabled {
+    background-color: var(--#{$color}-600);
+    border-color: var(--#{$color}-600);
+  }
+
+  &:not(:disabled):not(.disabled):active,
+  &:not(:disabled):not(.disabled).active,
+  .show > &.dropdown-toggle {
+    background-color: var(--#{$color}-600);
+    border-color: var(--#{$color}-600);
+    &:focus {
+      box-shadow: 0 0 0 $btn-focus-width var(--#{$color}-300);
+    }
+  }
 }
+
+
+@mixin button-outline-css-variable($color) {
+  color: var(--#{$color});
+  border-color: var(--#{$color});
+
+   // hover
+   @include hover {
+    background-color: var(--#{$color}-600);
+    border-color: var(--#{$color}-600);
+  }
+  // focus
+  &:focus,
+  &.focus{
+    box-shadow: 0 0 0 $btn-focus-width var(--#{$color}-300);
+  }
+
+  // disabled
+  &.disabled,
+  &:disabled {
+    background-color: var(--#{$color}-600);
+    border-color: var(--#{$color}-600);
+  }
+
+  &:not(:disabled):not(.disabled):active,
+  &:not(:disabled):not(.disabled).active,
+  .show > &.dropdown-toggle {
+    background-color: var(--#{$color}-600);
+    border-color: var(--#{$color}-600);
+    &:focus {
+      box-shadow: 0 0 0 $btn-focus-width var(--#{$color}-300);
+    }
+  }
+}
+
+
+
+
+@mixin generate-color($color, $h, $s, $l){
+  --#{$color}-h: #{$h};
+  --#{$color}-s: #{$s};
+  --#{$color}-l: #{$l};
+  --#{$color}-100: hsl(var(--#{$color}-h), var(--#{$color}-s), calc(var(--#{$color}-l) * 2.3));
+  --#{$color}-200: hsl(var(--#{$color}-h), var(--#{$color}-s), calc(var(--#{$color}-l) * 2));
+  --#{$color}-300: hsl(var(--#{$color}-h), var(--#{$color}-s), calc(var(--#{$color}-l) * 1.75));
+  --#{$color}-400: hsl(var(--#{$color}-h), var(--#{$color}-s), calc(var(--#{$color}-l) * 1.25));
+  --#{$color}: hsl(var(--#{$color}-h), var(--#{$color}-s), var(--#{$color}-l));
+  --#{$color}-600: hsl(var(--#{$color}-h), var(--#{$color}-s), calc(var(--#{$color}-l) * 0.85));
+  --#{$color}-700: hsl(var(--#{$color}-h), var(--#{$color}-s), calc(var(--#{$color}-l) * 0.5));
+}
+
