--- a/assets/scss/modules/fields/_image.scss
+++ b/assets/scss/modules/fields/_image.scss
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color: var(--shade);
+    color: var(--foreground);
     width: 100%;
     height: 100%;
     background: transparentize($secondary, 0.15);
