--- a/templates/pages/about.twig
+++ b/templates/pages/about.twig
@@ -32,9 +32,9 @@
                 </a>
             </p>
 
-            <h3>{{ 'about.used_libraries'|trans }}{# Used Libraries / Components #}</h3>
+            <h3>{{ 'about.used_libraries'|trans }}{#  #}</h3>
 
-            <p>{{ 'about.list_of_used_libraries'|trans }}{# Below are the third party libraries that are used by Bolt. #}</p>
+            <p>{{ 'about.list_of_used_libraries'|trans }}{#  #}</p>
 
             <ul>
                 <li>The awesome <a href="https://symfony.com/4">Symfony 4, PHP framework</a> and a lot of the
